--- a/style.css
+++ b/style.css
@@ -117,10 +117,9 @@ body{
 }
 .third-img-content p{
     position: absolute;
-    top: 0;
+    top: 33%;
     color: white;
-    padding-left: 30%;
-    padding-top: 16%;
+    left: 33%;
     font-size: 30px;
 }
 .input-box{
@@ -177,6 +176,7 @@ input{
     
 }
 .details h3{
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-size: 30px;
     color: #9e9d9d;
 }
